application/k8-deployment/client-react/components/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: app-ns
spec:
  selector:
    app: react-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
